package Structural.decorator.ontapgk;

public abstract class AVKC {
    public abstract float TinhTong();
    public abstract void hienThi();
}
